feat: added pwa support and configured manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "FAQ Covid-19",
+  "name": "FAQ Covid-19",
+  "description": "frequently asked questions about covid-19",
   "icons": [
     {
       "src": "favicon.ico",
