new design completed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "FAQ Covid-19",
-  "name": "FAQ Covid-19",
-  "description": "frequently asked questions about covid-19",
+  "short_name": "FAQ COVID-19",
+  "name": "FAQ COVID-19",
+  "description": "frequently asked questions about COVID-19",
   "icons": [
     {
       "src": "favicon.ico",
